--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@ body {
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
+  /* text-align: center;
+  font-size: 18px; */
 
   /* Center slide text vertically */
   display: flex;
@@ -42,10 +42,11 @@ body {
 
 .swiper-slide img {
   display: block;
-  width: 50%;
-  height: 50%;
+  /* width: 50%;
+  height: 50%; */
   object-fit: cover;
 }
+
 
 .text-stroke-3 {
   -webkit-text-stroke: 1.2px rgb(70, 70, 70);
